--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block content %} 
     <h1> Inscription </h1>
+    <!-- Permet d'afficher le formulaire passer en paramètre dans RegisterController
+     Formulaire qui est instancier via le register type-->
     {{ form(form) }}
 {% endblock %}
 
