--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -7,6 +7,8 @@
 <hr>
 - <a href="{{ path('account') }}"> Retourner à mon compte </a> </br>
 <hr>
+
+<!-- Si la variable notification existe (variable qui existera quand l'utilisateur aura submit le formulaire) -->
 {% if notification %}
     <div class="alert alert-info"> {{ notification }}</div>
 {% endif %}
