--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -11,13 +11,15 @@
         <div class="col-md-9">
             <h3 class="text-center">Nos produits </h3>
 
-            <div class="row product-container" width="10" > 
+            <div class="row product-container" width="10" >
+                <!--On récupère tout les produits passé en paramètre et on appel chaque produit produit. Il suffit alors d'appeler product.laColonne pour afficher les informations de la base de données -->
                 {% for product in products %}
                     <div class="col-md-4"> 
                         <div class="product-item"> 
-                            <a href="{{ path('products', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"  ></a>
+                            <a href="{{ path('products', {'slug':product.slug }) }}"><img src="/projetCommerce/public/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid"  ></a>
                             <h5>{{ product.name }}</h5>
                             <span calss='product-subtitle'>{{ product.subtitle }}</span>
+                            <!-- Symfony fais toujours le prix fois 100 donc on doit le diviser, ensuite on demande a symfony de mettre deux chiffres après la virgules -->
                             <span class='product-price'>{{ (product.price / 100)|number_format(2)}} €</span>
                         </div>
                     </div>
