Supprimer un produit du panier, ajouter et enlever une quantité
- ajout de fonction permettant de supprimer un seul produit du panier ou d'enlever/ajouter une quantité
- Création des route qui appel les modification de la route
- Lisibilité du code dans la vue twig

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -46,10 +46,19 @@
                     </a>
                 </td>
 
-                <td>{{ (product.product.price / 100)|number_format(2)}}€</td>
-                <td>{{ ((product.product.price * product.quantity) /100)|number_format(2) }}€</td>
+                <td>
+                    {{ (product.product.price / 100)|number_format(2)}}€
+                </td>
 
-                <td><a href="{{ path('delete_to_cart', { 'id' : product.product.id }) }}"><img src="{{ asset('assets/img/delete.png')}}" height="20px" alt="Supprimer mon produit"></a> </td>
+                <td>
+                    {{ ((product.product.price * product.quantity) /100)|number_format(2) }}€
+                </td>
+
+                <td>
+                    <a href="{{ path('delete_to_cart', { 'id' : product.product.id }) }}">
+                        <img src="{{ asset('assets/img/delete.png')}}" height="20px" alt="Supprimer mon produit">
+                    </a>
+                </td>
 
             </tr>
                 <!-- On incremente la variable total en fonction des objets de notre tableau -->
