Ajout choix de l'adresse de livraison
- Methode qui permet d'ajouter une adresse et d'être rédiriger vers la page de commande après validation du formulaire
- Test si l'utilisateur a déjà des adresses sur son compte pour lui en faire créer une nouvelle ou non
- Transformation d'une chaine de caractère en html depuis un entité
- Formulaire a choix radio pour les adresses
- Affichage du formulaire dans la vue

--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+.{% extends 'base.html.twig' %}
 
 {% block title %}Valider ma commande{% endblock %}
 
@@ -9,12 +9,14 @@
     <hr>
     <div class="row mb-3">
         <div class="col-md-6">
+            <!-- Permet de lire le html (par exemple dans l'entity order on a marque [br] grâce a set formhtml les br seront des retour à la ligne-->
             {% set formHtml %}
                 {{ form_start(form,{action:path('order_recap')}) }}
                     {{ form_label(form.adresses, 'Choisissez votre adresse de livraison') }}
                 <a href="{{ path('account_address_add') }}"> Ajouter une nouvelle adresse</a>
                 {{ form_end(form) }}
             {% endset %}
+            <!-- fonction qui permet de dire qu'il faut remplacer -->
             {{ formHtml|replace({'[br]':'<br/>'})|raw }}
         </div>
         <div class="col-md-6">
